# solana-vault

test-page/: .env  .env.example  .gitignore  README.md  next.config.js  package.json  tsconfig.json
test-page/cefi_mock/: cefi_mock.ts
test-page/src/anchor/: setup.ts
test-page/src/components/: BoxWithTitle.tsx  common.tsx  interfaces.tsx
test-page/src/components/deposit/: DepositButton.tsx  DepositButton2.tsx  DepositInitButton.tsx  InitializeButton.tsx  WithdrawButton.tsx
test-page/src/components/wallet/: ContextProvider.tsx  RequestAirdrop.tsx  SendLegacyTransaction.tsx  SendTransaction.tsx  SendV0Transaction.tsx  SignIn.tsx  SignMessage.tsx  SignTransaction.tsx
test-page/src/components/withdraw/: CeFiBaseUrl.tsx  CommonValuesCheck.tsx  OrderlyKeyButton.tsx  OrderlySignCheckButton.tsx  RegisterUserAccount.tsx  RegisterUserAccountButton.tsx  SignCheckBox.tsx  SignCheckButton.tsx  SolanaSignCheckButton.tsx  WithdrawButton.tsx  WithdrawRequestButton.tsx
test-page/src/idl/: vault.ts
test-page/src/pages/: _app.tsx  index.tsx
vault/: Anchor.toml  package.json
vault/programs/oapp_mock/: Cargo.toml
vault/programs/oapp_mock/src/: errors.rs  lib.rs
vault/programs/oapp_mock/src/instructions/: mod.rs  oapp_send.rs
vault/programs/oapp_mock/src/state/: enforced_options.rs  mod.rs  oapp_config.rs
vault/programs/vault/: Cargo.toml
vault/programs/vault/src/: errors.rs  events.rs  lib.rs
vault/programs/vault/src/instructions/: call_oapp.rs  deposit.rs  initialize.rs  mod.rs  withdraw.rs
vault/tests/: oapp_mock.ts  vault.ts
(+2 files in other folders)
